--- a/src/assets/sass/layout/_sidebar.scss
+++ b/src/assets/sass/layout/_sidebar.scss
@@ -24,7 +24,7 @@
     .sidebar-menu {
         padding-bottom: 10px;
 
-        .header-menu span {
+        .header-menu {
             font-weight: bold;
             text-transform: uppercase;
             font-size: 14px;
